cabal-version:      3.0
name:               Hike

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis: Travel Planner
description: Travel Planner
license:            AGPL-3.0-or-later
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- extra-source-files:


common dependencies
    ghc-options: -Wall
    build-depends:
        base ^>=4.22.0.0,
        HDBC-sqlite3 ^>= 2.3.3.1
        

executable Hike
    import:           dependencies

    main-is:          Main.hs

    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2024
